--- a/style.css
+++ b/style.css
@@ -2,20 +2,32 @@
 .header {
 	width: 100%;
 	height: 100vh;
-	background-color: red;
+	background-color: cyan;
 }
 
+
 .navbar{
+	font-family: Montserrat;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	background-color: yellow;
+	display: flex;
+	flex-direction: row;
 	font-size: 20px;
-	margin-left: 500px; 
-	padding: 20px;
+	width: 97%;
+	padding: 30px;
+	justify-content: flex-end;
+	z-index: 999;
+	
 }
 .navbar a{
 	text-decoration:none;
 	color: black;
 	padding: 10px;
 	margin-left: 10px;
-	margin-top: 20px;
+
+	align-items: flex-end;
 }
 .border{
 	border:solid;
@@ -33,4 +45,58 @@ a:hover{
 	width: 100%;
 	height: 500px;
 	background-color: grey;
+}
+h1{
+	font-size: 37px;
+	margin: auto;
+	background-color: cyan;
+	text-align: center;
+	padding: auto;
+	padding-top: 200px;
+	font-family: Montserrat;
+	line-height: 60px;
+	text-shadow: 3px 3px 15px #696868;
+}
+.para{
+	font-size: 15px;
+	text-shadow: 3px 3px 15px #696868;	
+}
+#searchbar{
+	display: flex;
+	justify-content: center;
+}
+.search{
+	position: relative;
+	align-items: center;
+	width: 80%;
+    max-width: 825px;
+    padding: 0 70px;
+    height: 83px;
+    line-height: 83px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 4px 8px 10px rgba(0,0,0,.5);
+}
+
+.box {
+	font-family: Montserrat;
+	margin: 5px;
+	font-weight: bold;
+	border-radius: 5px;
+	box-shadow: 0px 5px 0px 6px rgba(0,0,0,.5);
+	padding: 5px,0px;
+	background-color: cyan;
+	width: 20%;
+	height: 24%;
+}
+.mobile{
+    position: relative;
+    width: 70%;
+    box-shadow: 0px 8px 10px rgba(0,0,0,.5);
+    padding: 2%;
+}
+.button{
+	width: 20%;
+	height: 20%;
+	border-radius: 5px;
 }
