--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	background-color: yellow;
+	background-color: #002541;
 	display: flex;
 	flex-direction: row;
 	font-size: 20px;
@@ -23,7 +23,7 @@
 }
 .navbar a{
 	text-decoration:none;
-	color: black;
+	color: white;
 	padding: 10px;
 	margin-left: 10px;
 
@@ -32,6 +32,8 @@
 .border{
 	border:solid;
 	border-color: white;
+	background-color: blue;
+
 }
 a:hover{
 	background-color: white;
@@ -39,12 +41,13 @@ a:hover{
 .middle {
 	width: 100%;
 	height: 500px;
-	background-color: yellow;
+	background-color: blue;
+	
 }
 .footer{
 	width: 100%;
-	height: 500px;
-	background-color: grey;
+	height: auto;
+	background-color :#002541;
 }
 h1{
 	font-size: 37px;
@@ -56,6 +59,18 @@ h1{
 	font-family: Montserrat;
 	line-height: 60px;
 	text-shadow: 3px 3px 15px #696868;
+}
+.next{
+	font-size: 37px;
+	margin: auto;
+	background-color: cyan;
+	text-align: center;
+	padding: auto;
+	padding: 5px;
+	font-family: Montserrat;
+	line-height: 60px;
+	text-shadow: 3px 3px 15px #696868;
+
 }
 .para{
 	font-size: 15px;
@@ -99,4 +114,112 @@ h1{
 	width: 20%;
 	height: 20%;
 	border-radius: 5px;
+}
+
+#names {
+	display: grid;
+	font-size: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1px;
+    width: 100%;
+    height:400px;
+    
+    max-width: 1280px;
+    margin: 0 auto;
+   	
+	
+	
+}
+.boxes {
+	margin: 10%;
+	width: 75%;
+	height: 75%;
+	background-color: cyan;
+	text-align: center;
+	box-shadow: 2px 2px 10px white;
+	border-radius: 30px;
+}
+
+ul ,li{
+	font-size: 15px;
+	text-align: left;
+	font-family: Montserrat;
+}
+.boxws ,a{
+	text-decoration: none;
+	font-family: Montserrat;
+	color: black;
+	font-size: 20px;
+}
+
+  #anim:hover{
+    animation-name: width;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+  }
+  @keyframes width{
+	100%{
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4); 
+		color: black;
+		background-color: silver;
+	}
+}
+.navbar2{
+	font-family: Montserrat;
+	display: flex;
+	flex-direction: row;
+	font-size: 20px;
+	width: 97%;
+	padding: 30px;
+	justify-content: flex-end;
+	z-index: 999;
+	
+}
+.navbar2 a{
+	font-family: Montserrat;
+	display: flex;
+	padding: auto;
+	flex-direction: row;
+	font-size: 20px;
+	margin: 5%;
+	margin-top: 0px;
+	justify-content: flex-end;
+	border-color: white;
+	color: yellow;
+}
+
+hr {
+  	border:none;
+  	height: 20px;
+ 	width: 90%;
+	height: 5px;
+	margin-top: 0;
+	border-color: white;
+	border-bottom: 1px solid white;
+	box-shadow: 10px 10px 10px 0px white;
+  	margin: -50px auto 10px; 
+}
+#ending {
+	display: grid;
+	font-size: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1px;
+    width: 100%;
+    height:auto;
+    
+    max-width: 1280px;
+    margin: 0 auto;
+   	
+	
+	
+}
+
+#boxes {
+	margin: 10%;
+	width: 75%;
+	height: 75%;
+	background-color: cyan;
+	text-align: center;
+	box-shadow: 2px 2px 10px white;
+	border-radius: 30px;
 }
