--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a:hover{
 }
 .middle {
 	width: 100%;
-	height: 500px;
+	height: auto;
 	background-color: blue;
 	
 }
@@ -102,12 +102,13 @@ h1{
 	padding: 5px,0px;
 	background-color: cyan;
 	width: 20%;
-	height: 24%;
+	height: auto;
 }
 .mobile{
     position: relative;
     width: 70%;
-    box-shadow: 0px 8px 10px rgba(0,0,0,.5);
+    height: auto;
+   
     padding: 2%;
 }
 .button{
